Test/allocated1/Allocated2.dfy.expect
The /allocated:<n> option is deprecated
Allocated2.dfy(4,8): Error: the included file AllocatedCommon.dfyi contains error(s)
AllocatedCommon.dfyi(23,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(24,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(25,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(27,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(28,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(29,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(29,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(30,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(30,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(31,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(31,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(32,59): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(33,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(34,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(35,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(37,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(46,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(47,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(48,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(50,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(51,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(52,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(52,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(53,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(53,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(54,26): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(54,43): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(55,59): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(56,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(57,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(58,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(60,9): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(206,11): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(207,11): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(214,11): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(215,11): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(222,11): Error: a function definition is not allowed to depend on the set of allocated references
AllocatedCommon.dfyi(223,11): Error: a function definition is not allowed to depend on the set of allocated references
39 resolution/type errors detected in Allocated2.dfy
